# casper-cogs

./: .gitignore  README.md  info.json  pyproject.toml
lemlang/: __init__.py  cog.py  info.json
meatball_day/: __init__.py  info.json  meatball_day.py
meatballday/: __init__.py  info.json
wordlereact/: __init__.py  cog.py  info.json
